💄 add link and fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto;
-	max-height: 250vh;
+	max-height: auto;
 	max-width: 128rem;
 	background-color: #fff;
 	border: 2px dotted #eee;
@@ -12,5 +12,4 @@
 .App-dark {
 	background-color: #222;
 	border: 2px dotted #444;
-	box-shadow: 0 0 1rem rgba(255, 255, 255, 0.6);
 }
